V2.0 fixed scrollbar

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -32,10 +32,10 @@ body{
     text-align: center;
 }
 #diceHistoryThrow{
+    overflow: auto;
     height: 350px;
     width: 200px;
     border: 2px solid black;
-    border-radius: 40px;
 }
 #history{
     margin-left: 15px;
@@ -43,3 +43,17 @@ body{
 button{
     margin-top: 20px;
 }
+::-webkit-scrollbar {
+    
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  /* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
